# git-repo-analyzer

./: .gitignore  README.md  app.py  app_old.py  claude.md  prompt_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md  validate_config.py
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
src/git_analyzer/: __init__.py  config.py  config_old.py
src/git_analyzer/services/: __init__.py  git_platform.py  github.py  repository_manager.py
src/git_analyzer/ui/: __init__.py
src/git_analyzer/utils/: __init__.py
tests/: __init__.py  test_config.py  test_git_platform.py  test_github.py  test_repository_manager.py
